<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary"
    tools:context=".ui.AddMountainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingEnd="30dp">
        <ImageView
            android:id="@+id/btnBackAddMountain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountain_name"
            android:layout_marginTop="30dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/edtMountainName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:hint="@string/masukkan_nama_gunung"
            android:textColorHint="@color/hinttext"
            android:inputType="text"
            android:background="@drawable/background_edt_mountain"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountain_image"
            android:layout_marginTop="20dp"
            android:textSize="16sp"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvAddImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:id="@+id/llAddImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivAddMountain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:id="@+id/ivaddImageDummy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_image"
                    />
                <TextView
                    android:id="@+id/tvAddCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tambah_cover"
                    android:textColor="@color/hinttext"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginTop="20dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:hint="@string/masukkan_lokasi_gunung"
            android:textColorHint="@color/hinttext"
            android:background="@drawable/background_edt_mountain"
            android:inputType="text"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:layout_marginTop="20dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/edtHeight"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_edt_mountain"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mdpl"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="20dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edt_mountain"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_btnlogin"
            android:text="Submit"
            />

    </LinearLayout>


</ScrollView>