<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"

    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"

    app:cardElevation="3dp"
    >

    <ImageView
        android:id="@+id/ivMountain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bromo_mountain"
        android:scaleType="fitXY"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tvMountainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_mountain"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/text_mountain_name"
            android:layout_marginStart="5dp"
            android:textSize="13sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:text="@string/view"
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/view_background"
            android:layout_alignParentRight="true"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tvMountainName"
            android:layout_marginTop="4dp"
            />
        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_name"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/text_mountain_location"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_toEndOf="@+id/ivLocation"
            android:layout_below="@id/tvMountainName"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>